React Functional Cart

--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -59,6 +59,10 @@
         object-fit: contain;
     }
 
+    >article {
+        text-align: center;
+    }
+
     > div{
         display:flex;
         align-items: center;
